# stm32-cmake-blinking-led

./: .gitignore  CMakeLists.txt  README.md  project.ft
cmake/defaults/: stm32_cache.cmake
cmake/modules/: FindCMSIS.cmake  FindSTM32HAL.cmake  Utils.cmake
cmake/toolchain/: gcc_stm32.cmake
cubemx/: cubemx.ioc
cubemx/Inc/: main.h
cubemx/Src/: gpio.c  main.c  usart.c
source/: CMakeLists.txt
source/crt/: CMakeLists.txt  linker_script.ld  startup.s
source/cubemx/: CMakeLists.txt
source/cubemx/inc/cubemx/: main.h
source/cubemx/src/: main.c
source/hal/: CMakeLists.txt
source/hal/inc/hal/: hal_cpu.h  hal_gpio.h  hal_uart.h
source/hal/src/: hal_cpu.cpp  hal_gpio.cpp  hal_uart.cpp
source/irq/: CMakeLists.txt
source/irq/inc/irq/: irq.h
source/irq/src/: irq.cpp
source/main/: CMakeLists.txt
source/main/src/: main.cpp  main.h
source/startup/: CMakeLists.txt
source/startup/inc/startup/: startup.h
source/startup/src/: startup.cpp
source/trace/: CMakeLists.txt
source/trace/inc/trace/: string_stream.h  trace.h  uart_trace.h
source/trace/src/: string_stream.cpp  trace.cpp  uart_trace.cpp
utils/: openocd.cfg
